[75] switch cases improvement